{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 16,
  "lineage": "8fef0105-f528-de70-4d2d-d13485a6b4fa",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "mar_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-066784287e358dad1",
            "arn": "arn:aws:ec2:us-east-1:690016754187:instance/i-09d798665366a7079",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09d798665366a7079",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e9b0915522578b3a",
            "private_dns": "ip-10-9-1-218.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.9.1.218",
            "public_ip": "44.199.247.183",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-085693e4023dcdd33",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0295bc1d1086c56c8",
            "tags": {
              "Name": "mar_web_dev"
            },
            "tags_all": {
              "Name": "mar_web_dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a09e3585a1c8e5d8"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.mar_sg",
            "module.vpc.aws_subnet.websubnet",
            "module.vpc.aws_vpc.mar-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mar_igway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690016754187:internet-gateway/igw-045dd4eaef1d37ef7",
            "id": "igw-045dd4eaef1d37ef7",
            "owner_id": "690016754187",
            "tags": {
              "name": "mar_igway"
            },
            "tags_all": {
              "name": "mar_igway"
            },
            "vpc_id": "vpc-07f10e0e88e3f89e7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.mar-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "mar_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-045dd4eaef1d37ef7",
            "id": "r-rtb-0958866e45ec3857f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0958866e45ec3857f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.mar_igway",
            "module.vpc.aws_route_table.mar_rt",
            "module.vpc.aws_vpc.mar-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mar_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690016754187:route-table/rtb-0958866e45ec3857f",
            "id": "rtb-0958866e45ec3857f",
            "owner_id": "690016754187",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07f10e0e88e3f89e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.mar-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mar_rt-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1963a8a6c90c7ad",
            "route_table_id": "rtb-0958866e45ec3857f",
            "subnet_id": "subnet-0295bc1d1086c56c8"
          },
          "dependencies": [
            "module.vpc.aws_route_table.mar_rt",
            "module.vpc.aws_subnet.websubnet",
            "module.vpc.aws_vpc.mar-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mar_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690016754187:security-group/sg-0a09e3585a1c8e5d8",
            "description": "web server sg",
            "egress": [],
            "id": "sg-0a09e3585a1c8e5d8",
            "ingress": [],
            "name": "mar_ssh_sg",
            "name_prefix": "",
            "owner_id": "690016754187",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07f10e0e88e3f89e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.mar-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dbsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690016754187:subnet/subnet-04fb25c2348d481f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.9.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04fb25c2348d481f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "690016754187",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dbsubnet"
            },
            "tags_all": {
              "Name": "dbsubnet"
            },
            "vpc_id": "vpc-07f10e0e88e3f89e7"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "cidr_block"
              }
            ]
          ],
          "dependencies": [
            "module.vpc.aws_vpc.mar-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "websubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690016754187:subnet/subnet-0295bc1d1086c56c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.9.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0295bc1d1086c56c8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "690016754187",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "websubnet"
            },
            "tags_all": {
              "Name": "websubnet"
            },
            "vpc_id": "vpc-07f10e0e88e3f89e7"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "cidr_block"
              }
            ]
          ],
          "dependencies": [
            "module.vpc.aws_vpc.mar-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mar-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690016754187:vpc/vpc-07f10e0e88e3f89e7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.9.0.0/16",
            "default_network_acl_id": "acl-0577a404b6cd351e8",
            "default_route_table_id": "rtb-0d1a62b7dcb740094",
            "default_security_group_id": "sg-0343dc48e12e19ad8",
            "dhcp_options_id": "dopt-0b663d95e64fab661",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07f10e0e88e3f89e7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d1a62b7dcb740094",
            "owner_id": "690016754187",
            "tags": {
              "Name": "mar-vpc"
            },
            "tags_all": {
              "Name": "mar-vpc"
            }
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "cidr_block"
              }
            ]
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "mar_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690016754187:security-group-rule/sgr-0f68cc368a2dbb7c8",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0f68cc368a2dbb7c8",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a09e3585a1c8e5d8",
            "security_group_rule_id": "sgr-0f68cc368a2dbb7c8",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.mar_sg",
            "module.vpc.aws_vpc.mar-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "mar_igress_22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690016754187:security-group-rule/sgr-0dd8e2bc9b5deaf22",
            "cidr_ipv4": "122.13.0.55/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0dd8e2bc9b5deaf22",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a09e3585a1c8e5d8",
            "security_group_rule_id": "sgr-0dd8e2bc9b5deaf22",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.mar_sg",
            "module.vpc.aws_vpc.mar-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "mar_igress_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690016754187:security-group-rule/sgr-0838db643b3c3beb5",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0838db643b3c3beb5",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a09e3585a1c8e5d8",
            "security_group_rule_id": "sgr-0838db643b3c3beb5",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.mar_sg",
            "module.vpc.aws_vpc.mar-vpc"
          ]
        }
      ]
    }
  ]
}